Настроено отображение картинки в 1 новости

--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
@@ -51,36 +51,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T49-9W-h1i">
-                                <rect key="frame" x="67" y="266" width="240" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T49-9W-h1i">
+                                <rect key="frame" x="26" y="314" width="333" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gR3-xP-PjE">
-                                <rect key="frame" x="67" y="323" width="240" height="67"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2PA-ri-1Uf">
-                                <rect key="frame" x="67" y="430" width="226" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HDb-GX-SQ4">
+                                <rect key="frame" x="0.0" y="44" width="375" height="252"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gR3-xP-PjE">
+                                <rect key="frame" x="26" y="365.5" width="333" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="HDb-GX-SQ4" firstAttribute="trailing" secondItem="Lqr-hP-SbW" secondAttribute="trailing" id="00B-uD-BUB"/>
+                            <constraint firstItem="gR3-xP-PjE" firstAttribute="leading" secondItem="Lqr-hP-SbW" secondAttribute="leading" constant="26" id="FC2-aP-yfi"/>
+                            <constraint firstItem="gR3-xP-PjE" firstAttribute="top" secondItem="T49-9W-h1i" secondAttribute="bottom" constant="31" id="GcJ-aw-uVr"/>
+                            <constraint firstItem="T49-9W-h1i" firstAttribute="leading" secondItem="Lqr-hP-SbW" secondAttribute="leading" constant="26" id="KNq-hS-gMf"/>
+                            <constraint firstItem="Lqr-hP-SbW" firstAttribute="trailing" secondItem="T49-9W-h1i" secondAttribute="trailing" constant="16" id="Kkk-zL-8ep"/>
+                            <constraint firstItem="Lqr-hP-SbW" firstAttribute="trailing" secondItem="gR3-xP-PjE" secondAttribute="trailing" constant="16" id="PVm-Qp-haC"/>
+                            <constraint firstItem="Lqr-hP-SbW" firstAttribute="bottom" secondItem="gR3-xP-PjE" secondAttribute="bottom" constant="281" id="R3l-g1-OXl"/>
+                            <constraint firstItem="T49-9W-h1i" firstAttribute="top" secondItem="HDb-GX-SQ4" secondAttribute="bottom" constant="19" id="aOW-cF-ntH"/>
+                            <constraint firstItem="gR3-xP-PjE" firstAttribute="top" secondItem="T49-9W-h1i" secondAttribute="bottom" constant="31" id="c3B-J7-7H6"/>
+                            <constraint firstItem="T49-9W-h1i" firstAttribute="top" secondItem="HDb-GX-SQ4" secondAttribute="bottom" constant="18" id="k3a-Pp-6Ti"/>
+                            <constraint firstItem="HDb-GX-SQ4" firstAttribute="leading" secondItem="Lqr-hP-SbW" secondAttribute="leading" id="sCa-WR-sBk"/>
+                            <constraint firstItem="HDb-GX-SQ4" firstAttribute="top" secondItem="Lqr-hP-SbW" secondAttribute="top" id="xkI-xK-FSx"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Lqr-hP-SbW"/>
                     </view>
                     <navigationItem key="navigationItem" id="vSM-4i-n2X"/>
                     <connections>
+                        <outlet property="imageView" destination="HDb-GX-SQ4" id="ho1-l5-vdV"/>
                         <outlet property="labelDescription" destination="gR3-xP-PjE" id="3pu-eH-KEc"/>
                         <outlet property="labelTitle" destination="T49-9W-h1i" id="c0H-Ix-80q"/>
-                        <outlet property="urlImage" destination="2PA-ri-1Uf" id="U6U-iO-T0V"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LnW-q1-HhQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
